[gd_scene load_steps=6 format=3 uid="uid://c3grqfmlnhc8d"]

[ext_resource type="FontFile" uid="uid://c4woi53l5vyy2" path="res://fonts/doulos_sil.ttf" id="1_8ntov"]
[ext_resource type="Script" path="res://scripts/ui/menu_ui/main_menu.gd" id="2_r8lfl"]
[ext_resource type="PackedScene" uid="uid://8nq84a36g3sp" path="res://scenes/ui/menu_ui/level_select/button_switch_scene.tscn" id="3_7nuhl"]
[ext_resource type="PackedScene" uid="uid://b5cx4c5ht3cw6" path="res://scenes/ui/menu_ui/menu_settings.tscn" id="3_lo666"]

[sub_resource type="Theme" id="Theme_n0nuu"]
default_font = ExtResource("1_8ntov")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_n0nuu")
script = ExtResource("2_r8lfl")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ButtonSwitchScene" parent="CenterContainer/Menu" instance=ExtResource("3_7nuhl")]
layout_mode = 2
text = "Выбор уровня"
scene_path = "res://scenes/ui/menu_ui/level_select/menu_level_select.tscn"

[node name="ButtonSettings" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Настройки"
flat = true

[node name="ButtonExit" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Выйти из игры"
flat = true

[node name="MenuSettings" parent="CenterContainer" instance=ExtResource("3_lo666")]
visible = false
layout_mode = 2

[connection signal="pressed" from="CenterContainer/Menu/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="exit_menu" from="CenterContainer/MenuSettings" to="." method="_on_menu_settings_exit_menu"]
